---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 2021-01-16
  Changes:
  Bugfixes:
    - fixing crash when loading save file after settings changed
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 2021-01-15
  Changes:
    - Remindor frame management 
    - Remindor settings and automatic things
    - localisations
    - Close buttons for any gui (suggested by Ting_amm)
  Bugfixes:
    - fixing gui update on inventory/research changes
    - fixing crash when loading save file with Presentor and/or Remindor open
  Refactor:
    - [tech] using flib-gui-beta
    - [tech] ui-rework
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2021-01-05
  Changes:
    - new: Selector for remindor
  Refactor:
    - [tech] using more flib-gui
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2020-12-21
  Bugfixes:
    - Miningrecipe must not not requirements
  Changes:
    - "Remindor" - create tasks to remind you to do things
    - Remindor: smart presentation of technologies and ingredients 
    - Stack of goods show range and probability as tooltip
    - Remindor: some horizontal lines
  Refactor:
    - [tech] sorting feature 
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2020-12-12
  Bugfixes:
    - [tech] fixing inherited has to be class specific
    - fixing wrong Joule calculations
    - fixing crash at load
  Changes:
    - tooltip on items: inventory amount and crafting potential
    - crafting from any item in Recipe panel
    - Recipe panel layout
    - new: Remindor
    - [tech] some more table functions
  Refactor:
    - SpecialActions