@@ -26,10 +26,11 @@ auto-research=Forschung automatisch durchführen
 auto-crafting=Herstellung automatisch durchführen  
 remove-when-fulfilled=Aufgabe entfernen, wenn sie erfüllt ist
 default=Vorbelegung
-moveTaskToTop=Aufgabe zum Anfang der Liste verschieben
-moveTaskUp=Aufgabe nach oben schieben
-moveTaskDown=Aufgabe nach unten schieben
-moveTaskToBottom=Aufgabe zum Ende der Liste verschieben
+move-task-to-top=Aufgabe zum Anfang der Liste verschieben
+move-task-up=Aufgabe nach oben schieben
+move-task-down=Aufgabe nach unten schieben
+move-task-to-bottom=Aufgabe zum Ende der Liste verschieben
+requested-amount=Anforderungsmenge:
 
 [mod-setting-name]
 ingteb_column-tab-threshold=Benutze Tabs wenn die Anzahl der Spalten größer ist als ...
