@@ -29,10 +29,11 @@ auto-research=Research automatically
 auto-crafting=Craft automatically 
 remove-when-fulfilled=Remove task when fulfilled
 default=default
-moveTaskToTop=move task to top
-moveTaskUp=move task up
-moveTaskDown=move task down
-moveTaskToBottom=move task to bottom
+move-task-to-top=move task to top
+move-task-up=move task up
+move-task-down=move task down
+move-task-to-bottom=move task to bottom
+requested-amount=Requested amount:
 
 [mod-setting-name]
 ingteb_column-tab-threshold=当列多于…使用选项卡
